tests/spec/pass/import_site_packages.aja
import ("dep_pkg")
import (
    {
        hello
    } from "dep_pkg"
)

print(dep_pkg.hello("aja"))
print(hello("sendiri"))
