tests/spec/fail/http_request_ex_wrong_arity.aja
import (
    "http"
)

print(http.requestEx("GET"))
